--- a/app/app.global.css
+++ b/app/app.global.css
@@ -1,6 +1,40 @@
 body {
   position: relative;
   height: 100vh;
+  font-size: 14pt;
   font-family: Arial, Helvetica, Helvetica Neue;
   overflow-y: hidden;
 }
+
+#content {
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 80px;
+}
+
+summary {
+  font-weight: bold;
+}
+
+details {
+  margin-bottom: 10px;
+}
+
+form {
+  padding: 5px; 
+}
+
+label {
+  font-weight: bold;
+}
+
+input {
+  font-size: 14pt;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+input[type="file"] { 
+  font-size: 14pt;
+}
+
